--- a/client/login.html
+++ b/client/login.html
@@ -2,25 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Login - ShareNet</title>
+<title>Login - ShareNest</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<nav class="navbar">
-<div class="logo">ShareNet</div>
-</nav>
-
-<section class="auth-container">
-<div class="auth-card">
+<div class="auth-container">
 <h2>Login</h2>
+
 <form id="loginForm">
-<input type="email" id="email" placeholder="Email" required>
-<input type="password" id="password" placeholder="Password" required>
+<div class="form-group">
+<label>Email</label>
+<input type="text" id="email" placeholder="Enter your email">
+<small class="error" id="emailError"></small>
+</div>
+
+<div class="form-group">
+<label>Password</label>
+<input type="password" id="password" placeholder="Enter your password">
+<small class="error" id="passwordError"></small>
+</div>
+
 <button type="submit" class="btn-primary">Login</button>
 </form>
+
+<p class="success" id="successMessage"></p>
 </div>
-</section>
 
 <script src="js/main.js"></script>
 </body>
